Speed up pack_cuda_lut

--- a/analysis/runs/controller copy.ipynb
+++ b/analysis/runs/controller copy.ipynb
@@ -16,6 +16,7 @@
     "from IPython.display import clear_output\n",
     "import time\n",
     "import multiprocess as mp\n",
+    "mp.set_start_method(\"spawn\", force=True)\n",
     "import copy"
    ]
   },
@@ -37,7 +38,7 @@
     "DO_CHECK = False\n",
     "\n",
     "# User inputs\n",
-    "N_TREES_LIST = [33,34,35,36]+list(np.arange(50,101)) if not DO_CHECK else [34,35,36,37]  # List of N_trees to run\n",
+    "N_TREES_LIST = [33,34]\n",
     "N_PROCESSES = 3 if kgs.env=='local' else 8  # Maximum concurrent processes\n",
     "DIAGNOSTIC_INTERVAL = 120  # Seconds between diagnostic updates\n",
     "SEED_BASE = 85  # Base seed for reproducibility\n",
