--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -24,17 +24,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 9.020 ms\n",
+      "ptxas info    : Compile time = 8.979 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 450.838 ms\n",
+      "ptxas info    : Compile time = 461.463 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 80 registers, used 1 barriers, 1264 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 369.140 ms\n",
+      "ptxas info    : Compile time = 387.212 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [crystal] ---\n",
@@ -51,17 +51,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.866 ms\n",
+      "ptxas info    : Compile time = 9.070 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 418.916 ms\n",
+      "ptxas info    : Compile time = 440.025 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 64 registers, used 1 barriers, 1232 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 72.839 ms\n",
+      "ptxas info    : Compile time = 78.312 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
@@ -78,17 +78,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.841 ms\n",
+      "ptxas info    : Compile time = 8.906 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 408.108 ms\n",
+      "ptxas info    : Compile time = 409.658 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 56 registers, used 1 barriers, 144 bytes cumulative stack size, 420 bytes cmem[0], 40 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 73.957 ms\n",
+      "ptxas info    : Compile time = 76.922 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [sep] ---\n",
@@ -152,9 +152,9 @@
       "ptxas info    : 16 bytes gmem, 48 bytes cmem[3], 16 bytes cmem[4]\n",
       "ptxas info    : Compiling entry function 'multi_overlap_lut_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_lut_total\n",
-      "    16 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 40 registers, used 1 barriers, 16 bytes cumulative stack size, 404 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 9.578 ms\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 40 registers, used 1 barriers, 404 bytes cmem[0]\n",
+      "ptxas info    : Compile time = 8.592 ms\n",
       "\n",
       "Kernel multi_overlap_lut_total:\n",
       "  Registers: 40\n",
@@ -184,22 +184,22 @@
       "ptxas info    : Function properties for diversity_shortcut_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 10.049 ms\n",
+      "ptxas info    : Compile time = 9.434 ms\n",
       "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
       "ptxas info    : Function properties for compute_costs\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 3.242 ms\n",
+      "ptxas info    : Compile time = 3.315 ms\n",
       "ptxas info    : Compiling entry function 'auction_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for auction_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 35 registers, used 0 barriers, 412 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 6.978 ms\n",
+      "ptxas info    : Compile time = 6.877 ms\n",
       "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for hungarian_kernel\n",
       "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 16.182 ms\n",
+      "ptxas info    : Compile time = 15.319 ms\n",
       "\n",
       "\n",
       "--- Kernel: hungarian_kernel ---\n",
@@ -229,11 +229,11 @@
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 0\n",
       "  Local memory (bytes): 0\n",
-      "Generation 0: Best costs = [[0.386849, 0.020388]]\n",
-      "Generation 1: Best costs = [[0.386849, 0.012603]]\n",
-      "Generation 2: Best costs = [[0.386849, 0.00921]]\n",
-      "Generation 3: Best costs = [[0.386849, 0.005618]]\n",
-      "Generation 4: Best costs = [[0.386849, 0.00477]]\n",
+      "Generation 0: Best costs = [[0.386849, 0.019879]]\n",
+      "Generation 1: Best costs = [[0.386849, 0.014791]]\n",
+      "Generation 2: Best costs = [[0.386849, 0.014791]]\n",
+      "Generation 3: Best costs = [[0.386849, 0.011944]]\n",
+      "Generation 4: Best costs = [[0.386849, 0.008532]]\n",
       "Building lookup table for CollisionCostOverlappingArea...\n",
       "Building LUT: 700 x 700 x 50 = 24,500,000 grid points\n",
       "  Processing theta 1/50\n",
@@ -243,9 +243,9 @@
       "  Y: 700 -> 651 (removed 49)\n",
       "  Theta: 50 -> 50 (removed 0)\n",
       "  Total reduction: 25.3% (6,206,900 points)\n",
-      "Generation 0: Best costs = [[0.386849, 0.020388]]\n",
-      "Generation 1: Best costs = [[0.386849, 0.012603]]\n",
-      "Generation 2: Best costs = [[0.386849, 0.00921]]\n",
+      "Generation 0: Best costs = [[0.386849, 0.019879]]\n",
+      "Generation 1: Best costs = [[0.386849, 0.014791]]\n",
+      "Generation 2: Best costs = [[0.386849, 0.014791]]\n",
       "Building lookup table for CollisionCostOverlappingArea...\n",
       "Building LUT: 700 x 700 x 50 = 24,500,000 grid points\n",
       "  Processing theta 1/50\n",
@@ -255,8 +255,8 @@
       "  Y: 700 -> 651 (removed 49)\n",
       "  Theta: 50 -> 50 (removed 0)\n",
       "  Total reduction: 25.3% (6,206,900 points)\n",
-      "Generation 3: Best costs = [[0.386849, 0.005618]]\n",
-      "Generation 4: Best costs = [[0.386849, 0.00477]]\n",
+      "Generation 3: Best costs = [[0.386849, 0.011944]]\n",
+      "Generation 4: Best costs = [[0.386849, 0.008532]]\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -383,45 +383,7 @@
       "[3.944325]\n",
       "[3.9443247191489634]\n",
       "[2.710115]\n",
-      "[2.710114954401768]\n",
-      "[3.3485513]\n",
-      "[3.348551696584536]\n",
-      "  Vectorized check for CollisionCostSeparation\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[4.10485643 5.05750719]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "  Vectorized check for CollisionCostSeparation\n",
-      "[[ 0.83333333  1.25        1.04719755]\n",
-      " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[0.14137271 3.94432472]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing BoundaryDistanceCost\n",
-      "[8.393464]\n",
-      "[8.393463985029813]\n",
-      "[0.07739207]\n",
-      "[0.07739210274006779]\n",
-      "  Vectorized check for BoundaryDistanceCost\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[8.39346399 0.0773921 ]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing BoundaryDistanceCost\n",
-      "[41.967316]\n",
-      "[41.96731992514906]\n",
-      "[0.38696036]\n",
-      "[0.38696051370033896]\n",
-      "  Vectorized check for BoundaryDistanceCost\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[41.96731993  0.38696051]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing CollisionCostOverlappingArea\n",
-      "[2.1461854]\n",
-      "[2.146186099184761]\n"
+      "[2.710114954401768]\n"
      ]
     }
    ],
