--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -24,17 +24,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.453 ms\n",
+      "ptxas info    : Compile time = 9.356 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 407.536 ms\n",
+      "ptxas info    : Compile time = 426.344 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 80 registers, used 1 barriers, 1264 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 354.615 ms\n",
+      "ptxas info    : Compile time = 350.466 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [crystal] ---\n",
@@ -51,17 +51,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.191 ms\n",
+      "ptxas info    : Compile time = 8.991 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 412.284 ms\n",
+      "ptxas info    : Compile time = 406.002 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 64 registers, used 1 barriers, 1232 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 71.302 ms\n",
+      "ptxas info    : Compile time = 70.608 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
@@ -78,17 +78,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.654 ms\n",
+      "ptxas info    : Compile time = 8.167 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 406.039 ms\n",
+      "ptxas info    : Compile time = 401.320 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 56 registers, used 1 barriers, 144 bytes cumulative stack size, 420 bytes cmem[0], 40 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 72.015 ms\n",
+      "ptxas info    : Compile time = 73.479 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [sep] ---\n",
@@ -149,12 +149,12 @@
       "/usr/include/math.h:1152: note: this is the location of the previous definition\n",
       " 1152 | # define M_PI           3.14159265358979323846  /* pi */\n",
       "      | \n",
-      "ptxas info    : 16 bytes gmem, 48 bytes cmem[3], 16 bytes cmem[4]\n",
+      "ptxas info    : 16 bytes gmem, 52 bytes cmem[3], 16 bytes cmem[4]\n",
       "ptxas info    : Compiling entry function 'multi_overlap_lut_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_lut_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 1 barriers, 396 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 9.754 ms\n",
+      "ptxas info    : Compile time = 9.047 ms\n",
       "\n",
       "Kernel multi_overlap_lut_total:\n",
       "  Registers: 40\n",
@@ -184,22 +184,22 @@
       "ptxas info    : Function properties for diversity_shortcut_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 11.069 ms\n",
+      "ptxas info    : Compile time = 9.884 ms\n",
       "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
       "ptxas info    : Function properties for compute_costs\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 3.410 ms\n",
+      "ptxas info    : Compile time = 3.240 ms\n",
       "ptxas info    : Compiling entry function 'auction_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for auction_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 35 registers, used 0 barriers, 412 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 7.674 ms\n",
+      "ptxas info    : Compile time = 6.906 ms\n",
       "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for hungarian_kernel\n",
       "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 16.662 ms\n",
+      "ptxas info    : Compile time = 15.736 ms\n",
       "\n",
       "\n",
       "--- Kernel: hungarian_kernel ---\n",
@@ -488,7 +488,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7c87ba1ddbc0>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7715d1bfe2c0>\n",
       "All tests passed.\n"
      ]
     }
