--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "743f2f43",
    "metadata": {},
    "outputs": [
@@ -24,17 +24,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 9.356 ms\n",
+      "ptxas info    : Compile time = 10.986 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 426.344 ms\n",
+      "ptxas info    : Compile time = 463.041 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 80 registers, used 1 barriers, 1264 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 350.466 ms\n",
+      "ptxas info    : Compile time = 420.202 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [crystal] ---\n",
@@ -51,17 +51,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.991 ms\n",
+      "ptxas info    : Compile time = 9.761 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 406.002 ms\n",
+      "ptxas info    : Compile time = 493.740 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 64 registers, used 1 barriers, 1232 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 70.608 ms\n",
+      "ptxas info    : Compile time = 85.639 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
@@ -78,17 +78,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.167 ms\n",
+      "ptxas info    : Compile time = 10.162 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 401.320 ms\n",
+      "ptxas info    : Compile time = 484.268 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 56 registers, used 1 barriers, 144 bytes cumulative stack size, 420 bytes cmem[0], 40 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 73.479 ms\n",
+      "ptxas info    : Compile time = 74.679 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [sep] ---\n",
@@ -110,30 +110,18 @@
       "  Num registers: 36\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/d/packing/code/core/pack_dynamics.py:60: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
-      "  x0 = from_dlpack(x0.toDlpack())\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building lookup table for CollisionCostOverlappingArea...\n",
+      "  Local memory (bytes): 0\n",
+      "Building lookup table for CollisionCostExactSeparation using Minkowski difference...\n",
       "Building LUT: 451 x 900 x 50 = 20,295,000 grid points\n",
       "  Processing theta 1/50\n",
-      "Cost range: [0.000000, 0.223538]\n",
-      "Trimming zero edges:\n",
+      "Cost range: [-1.087277, 0.629361]\n",
+      "Trimming non-positive edges:\n",
       "  X: 451 -> 362 (removed 89)\n",
       "  Y: 900 -> 837 (removed 63)\n",
       "  Theta: 50 -> 50 (removed 0)\n",
       "  Total reduction: 25.4% (5,145,300 points)\n",
+      "Saving lookup table to cache: /mnt/d//packing/temp//lut_cache/exact_sep_Nx900_Ny900_Nt50_trimTrue_tree116323fb.lut_cache...\n",
+      "Successfully cached lookup table\n",
       "Compiling CUDA LUT kernel one-time only)\n",
       "Detected GPU compute capability: 89 (arch=sm_89)\n",
       "Compiling: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -lineinfo -arch=sm_89 -cubin /mnt/d//packing/temp/pack_cuda_lut_saved.cu -o /mnt/d//packing/temp/pack_cuda_lut.cubin\n",
@@ -154,7 +142,7 @@
       "ptxas info    : Function properties for multi_overlap_lut_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 1 barriers, 396 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 9.047 ms\n",
+      "ptxas info    : Compile time = 9.855 ms\n",
       "\n",
       "Kernel multi_overlap_lut_total:\n",
       "  Registers: 40\n",
@@ -166,6 +154,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/mnt/d/packing/code/core/pack_dynamics.py:60: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
+      "  x0 = from_dlpack(x0.toDlpack())\n",
       "/mnt/d/packing/code/core/pack_dynamics.py:92: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
       "  return from_dlpack(tmp_cost[:N].toDlpack()), from_dlpack(res.toDlpack())\n"
      ]
@@ -184,22 +174,22 @@
       "ptxas info    : Function properties for diversity_shortcut_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 9.884 ms\n",
+      "ptxas info    : Compile time = 11.149 ms\n",
       "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
       "ptxas info    : Function properties for compute_costs\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 3.240 ms\n",
+      "ptxas info    : Compile time = 3.089 ms\n",
       "ptxas info    : Compiling entry function 'auction_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for auction_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 35 registers, used 0 barriers, 412 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 6.906 ms\n",
+      "ptxas info    : Compile time = 7.514 ms\n",
       "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for hungarian_kernel\n",
       "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 15.736 ms\n",
+      "ptxas info    : Compile time = 15.284 ms\n",
       "\n",
       "\n",
       "--- Kernel: hungarian_kernel ---\n",
@@ -229,34 +219,20 @@
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 0\n",
       "  Local memory (bytes): 0\n",
-      "Generation 0: Best costs = [[0.386849, 0.022668]]\n",
-      "Generation 1: Best costs = [[0.386849, 0.008384]]\n",
-      "Generation 2: Best costs = [[0.386849, 0.008384]]\n",
-      "Generation 3: Best costs = [[0.386849, 0.005384]]\n",
-      "Generation 4: Best costs = [[0.386849, 0.004565]]\n",
-      "Building lookup table for CollisionCostOverlappingArea...\n",
-      "Building LUT: 451 x 900 x 50 = 20,295,000 grid points\n",
-      "  Processing theta 1/50\n",
-      "Cost range: [0.000000, 0.223538]\n",
-      "Trimming zero edges:\n",
-      "  X: 451 -> 362 (removed 89)\n",
-      "  Y: 900 -> 837 (removed 63)\n",
-      "  Theta: 50 -> 50 (removed 0)\n",
-      "  Total reduction: 25.4% (5,145,300 points)\n",
-      "Generation 0: Best costs = [[0.386849, 0.022668]]\n",
-      "Generation 1: Best costs = [[0.386849, 0.008384]]\n",
-      "Generation 2: Best costs = [[0.386849, 0.008384]]\n",
-      "Building lookup table for CollisionCostOverlappingArea...\n",
-      "Building LUT: 451 x 900 x 50 = 20,295,000 grid points\n",
-      "  Processing theta 1/50\n",
-      "Cost range: [0.000000, 0.223538]\n",
-      "Trimming zero edges:\n",
-      "  X: 451 -> 362 (removed 89)\n",
-      "  Y: 900 -> 837 (removed 63)\n",
-      "  Theta: 50 -> 50 (removed 0)\n",
-      "  Total reduction: 25.4% (5,145,300 points)\n",
-      "Generation 3: Best costs = [[0.386849, 0.005384]]\n",
-      "Generation 4: Best costs = [[0.386849, 0.004565]]\n",
+      "Generation 0: Best costs = [[0.386849, 0.030466]]\n",
+      "Generation 1: Best costs = [[0.386849, 0.00672]]\n",
+      "Generation 2: Best costs = [[0.386849, 0.00672]]\n",
+      "Generation 3: Best costs = [[0.386849, 0.006701]]\n",
+      "Generation 4: Best costs = [[0.386849, 0.004824]]\n",
+      "Loading cached lookup table from /mnt/d//packing/temp//lut_cache/exact_sep_Nx900_Ny900_Nt50_trimTrue_tree116323fb.lut_cache...\n",
+      "Successfully loaded cached lookup table\n",
+      "Generation 0: Best costs = [[0.386849, 0.030466]]\n",
+      "Generation 1: Best costs = [[0.386849, 0.00672]]\n",
+      "Generation 2: Best costs = [[0.386849, 0.00672]]\n",
+      "Loading cached lookup table from /mnt/d//packing/temp//lut_cache/exact_sep_Nx900_Ny900_Nt50_trimTrue_tree116323fb.lut_cache...\n",
+      "Successfully loaded cached lookup table\n",
+      "Generation 3: Best costs = [[0.386849, 0.006701]]\n",
+      "Generation 4: Best costs = [[0.386849, 0.004824]]\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -383,113 +359,7 @@
       "[3.944325]\n",
       "[3.9443247191489634]\n",
       "[2.710115]\n",
-      "[2.710114954401768]\n",
-      "[3.3485513]\n",
-      "[3.348551696584536]\n",
-      "  Vectorized check for CollisionCostSeparation\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[4.10485643 5.05750719]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "  Vectorized check for CollisionCostSeparation\n",
-      "[[ 0.83333333  1.25        1.04719755]\n",
-      " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[0.14137271 3.94432472]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing BoundaryDistanceCost\n",
-      "[8.393464]\n",
-      "[8.393463985029813]\n",
-      "[0.07739207]\n",
-      "[0.07739210274006779]\n",
-      "  Vectorized check for BoundaryDistanceCost\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[8.39346399 0.0773921 ]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing BoundaryDistanceCost\n",
-      "[41.967316]\n",
-      "[41.96731992514906]\n",
-      "[0.38696036]\n",
-      "[0.38696051370033896]\n",
-      "  Vectorized check for BoundaryDistanceCost\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[41.96731993  0.38696051]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing CollisionCostOverlappingArea\n",
-      "[2.1461854]\n",
-      "[2.146186099184761]\n",
-      "[2.636084]\n",
-      "[2.636084919047489]\n",
-      "[0.039675623]\n",
-      "[0.03967562067715555]\n",
-      "[1.8153595]\n",
-      "[1.8153594157090334]\n",
-      "[1.2306035]\n",
-      "[1.230603382744046]\n",
-      "[1.5908308]\n",
-      "[1.590830965112803]\n",
-      "  Vectorized check for CollisionCostOverlappingArea\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[2.1461861  2.63608492]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "  Vectorized check for CollisionCostOverlappingArea\n",
-      "[[ 0.83333333  1.25        1.04719755]\n",
-      " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[0.03967562 1.81535942]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing CostCompound\n",
-      "[1.6064565]\n",
-      "[1.6064569277644687]\n",
-      "[7.517251]\n",
-      "[7.517252156315438]\n",
-      "[1.3955765]\n",
-      "[1.3955765064284533]\n",
-      "[1.4088249]\n",
-      "[1.4088248646468866]\n",
-      "[1.1255345]\n",
-      "[1.1255344863205305]\n",
-      "[1.2745655]\n",
-      "[1.274565508975361]\n",
-      "  Vectorized check for CostCompound\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[1.60645693 7.51725216]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "  Vectorized check for CostCompound\n",
-      "[[ 0.83333333  1.25        1.04719755]\n",
-      " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[1.39557651 1.40882486]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "=== Testing line_intersection ===\n",
-      "=== Compiling CUDA Primitives Test Kernels ===\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
-      "Compilation successful!\n",
-      "Initialization complete!\n",
-      "Testing 29 cases...\n",
-      "✓ Forward results match with and without gradients\n",
-      "✓ All 29 cases passed, max gradient error: 1.64e-08\n",
-      "\n",
-      "✓ All gradients match finite differences!\n",
-      "✓ line_intersection test PASSED\n",
-      "\n",
-      "=== Testing clip_against_edge ===\n",
-      "Testing 13 cases...\n",
-      "✓ Forward results match with and without gradients\n",
-      "✓ All test cases passed, max gradient error: 7.32e-10\n",
-      "✓ clip_against_edge test PASSED\n",
-      "\n",
-      "=== Testing polygon_area ===\n",
-      "✓ Forward results match with and without gradients\n",
-      "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
-      "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7715d1bfe2c0>\n",
-      "All tests passed.\n"
+      "[2.710114954401768]\n"
      ]
     }
    ],
@@ -506,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -526,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
