--- a/analysis/runs/controller.ipynb
+++ b/analysis/runs/controller.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "39a25c9f",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,8 @@
     "            if os.path.isfile(pickle_path):\n",
     "                try:\n",
     "                    runner = kgs.dill_load(pickle_path)\n",
-    "                    runners[N_trees] = runner  # Only add to runners for diagnostic plots\n",
+    "                    if status == \"RUNNING\":\n",
+    "                        runners[N_trees] = runner  # Only add to runners for diagnostic plots\n",
     "                    \n",
     "                    # Store info for later display\n",
     "                    best_costs = [[round(float(x), 6) for x in s[-1].flatten()] \n",
