--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -359,7 +359,113 @@
       "[3.944325]\n",
       "[3.9443247191489634]\n",
       "[2.710115]\n",
-      "[2.710114954401768]\n"
+      "[2.710114954401768]\n",
+      "[3.3485513]\n",
+      "[3.348551696584536]\n",
+      "  Vectorized check for CollisionCostSeparation\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[4.10485643 5.05750719]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CollisionCostSeparation\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[0.14137271 3.94432472]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[8.393464]\n",
+      "[8.393463985029813]\n",
+      "[0.07739207]\n",
+      "[0.07739210274006779]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[8.39346399 0.0773921 ]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[41.967316]\n",
+      "[41.96731992514906]\n",
+      "[0.38696036]\n",
+      "[0.38696051370033896]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[41.96731993  0.38696051]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CollisionCostOverlappingArea\n",
+      "[2.1461854]\n",
+      "[2.146186099184761]\n",
+      "[2.636084]\n",
+      "[2.636084919047489]\n",
+      "[0.039675623]\n",
+      "[0.03967562067715555]\n",
+      "[1.8153595]\n",
+      "[1.8153594157090334]\n",
+      "[1.2306035]\n",
+      "[1.230603382744046]\n",
+      "[1.5908308]\n",
+      "[1.590830965112803]\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[2.1461861  2.63608492]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[0.03967562 1.81535942]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CostCompound\n",
+      "[1.6064565]\n",
+      "[1.6064569277644687]\n",
+      "[7.517251]\n",
+      "[7.517252156315438]\n",
+      "[1.3955765]\n",
+      "[1.3955765064284533]\n",
+      "[1.4088249]\n",
+      "[1.4088248646468866]\n",
+      "[1.1255345]\n",
+      "[1.1255344863205305]\n",
+      "[1.2745655]\n",
+      "[1.274565508975361]\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[1.60645693 7.51725216]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[1.39557651 1.40882486]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "=== Testing line_intersection ===\n",
+      "=== Compiling CUDA Primitives Test Kernels ===\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
+      "Compilation successful!\n",
+      "Initialization complete!\n",
+      "Testing 29 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 29 cases passed, max gradient error: 1.64e-08\n",
+      "\n",
+      "✓ All gradients match finite differences!\n",
+      "✓ line_intersection test PASSED\n",
+      "\n",
+      "=== Testing clip_against_edge ===\n",
+      "Testing 13 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All test cases passed, max gradient error: 7.32e-10\n",
+      "✓ clip_against_edge test PASSED\n",
+      "\n",
+      "=== Testing polygon_area ===\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
+      "✓ polygon_area test PASSED\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x75b0ed701c40>\n",
+      "All tests passed.\n"
      ]
     }
    ],
